mgmt/infra/workload-cluster/capi-controlplane/out/v1_Service_capi-kubeadm-control-plane-webhook-service_capi-kubeadm-control-plane-system_0.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    cluster.x-k8s.io/provider: control-plane-kubeadm
    clusterctl.cluster.x-k8s.io: ""
  name: capi-kubeadm-control-plane-webhook-service
  namespace: capi-kubeadm-control-plane-system
spec:
  ports:
  - port: 443
    targetPort: webhook-server
  selector:
    cluster.x-k8s.io/provider: control-plane-kubeadm
