mgmt/infra/workload-cluster/capi-controlplane/out/admissionregistration.k8s.io_v1_ValidatingWebhookConfiguration_capi-kubeadm-control-plane-validating-webhook-configuration__0.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: capi-kubeadm-control-plane-system/capi-kubeadm-control-plane-serving-cert
  creationTimestamp: null
  labels:
    cluster.x-k8s.io/provider: control-plane-kubeadm
    clusterctl.cluster.x-k8s.io: ""
  name: capi-kubeadm-control-plane-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: capi-kubeadm-control-plane-webhook-service
      namespace: capi-kubeadm-control-plane-system
      path: /validate-scale-controlplane-cluster-x-k8s-io-v1beta1-kubeadmcontrolplane
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation-scale.kubeadmcontrolplane.controlplane.cluster.x-k8s.io
  rules:
  - apiGroups:
    - controlplane.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - UPDATE
    resources:
    - kubeadmcontrolplanes/scale
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: capi-kubeadm-control-plane-webhook-service
      namespace: capi-kubeadm-control-plane-system
      path: /validate-controlplane-cluster-x-k8s-io-v1beta1-kubeadmcontrolplane
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.kubeadmcontrolplane.controlplane.cluster.x-k8s.io
  rules:
  - apiGroups:
    - controlplane.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - kubeadmcontrolplanes
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: capi-kubeadm-control-plane-webhook-service
      namespace: capi-kubeadm-control-plane-system
      path: /validate-controlplane-cluster-x-k8s-io-v1beta1-kubeadmcontrolplanetemplate
  failurePolicy: Fail
  name: validation.kubeadmcontrolplanetemplate.controlplane.cluster.x-k8s.io
  rules:
  - apiGroups:
    - controlplane.cluster.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - kubeadmcontrolplanetemplates
  sideEffects: None
